<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_background"
    android:id="@+id/find_friend"
    tools:context=".findFriendActivity">

    <TextView
        android:id="@+id/friendMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Find friend"
        android:textColor="@color/black"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/friendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/friendMsg"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="Email"
        android:padding="20dp"
        android:textColor="@color/black"
        android:background="@drawable/white_box"
        android:textColorHint="@color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addFriendButton"
        android:layout_below = "@id/friendEmail"
        android:text="add friend"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin = "20dp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backToMenu"
        android:layout_below = "@id/addFriendButton"
        android:text="Back to menu"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin = "20dp"

        />



</RelativeLayout>