<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/new_user_menu"
    android:layout_height="match_parent"
    tools:context=".NewUserMenu">

    <LinearLayout
        android:id="@+id/menu3"
        android:layout_width="378dp"
        android:layout_height="90dp"
        android:layout_below="@+id/menu2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findFriendButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="search friend"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/FriendListButtonXML"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
